--- a/PizzaParty/app/src/main/res/values/colors.xml
+++ b/PizzaParty/app/src/main/res/values/colors.xml
@@ -8,4 +8,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="my_green">#11BB11</color>
+    <color name="gray">#AAA</color>
+    <color name="dark_green">#22AA22</color>
+    <color name="orange">#ffa500</color>
+    <color name="colorPrimary">#696969</color>
 </resources>
