--- a/PizzaParty/app/src/main/res/values/themes.xml
+++ b/PizzaParty/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.PizzaParty" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.PizzaParty" parent="Theme.AppCompat.DayNight">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/orange</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
