--- a/Drawit/app/src/main/res/layout/activity_main.xml
+++ b/Drawit/app/src/main/res/layout/activity_main.xml
@@ -7,12 +7,53 @@
     tools:context=".MainActivity">
 
     <TextView
+        android:id="@+id/welcomeMessage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/welcome_to_drawit"
-        app:layout_constraintBottom_toBottomOf="parent"
+        style="@style/Text"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintRight_toRightOf="parent" />
 
+    <Spinner
+        android:id="@+id/optionsTab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:max="50"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/welcomeMessage" />
+
+    <Spinner
+        android:id="@+id/colorTab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:max="50"
+        app:layout_constraintLeft_toRightOf="@id/optionsTab"
+        app:layout_constraintTop_toBottomOf="@id/welcomeMessage" />
+
+    <TextView
+        android:id="@+id/size"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/size"
+        style="@style/Text"
+        app:layout_constraintTop_toBottomOf="@id/welcomeMessage"
+        app:layout_constraintLeft_toRightOf="@id/colorTab" />
+
+    <SeekBar
+        android:id="@+id/seekBar"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/welcomeMessage"
+        app:layout_constraintLeft_toRightOf="@id/size" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/addButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/plus_icon"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:contentDescription="add" />
 </androidx.constraintlayout.widget.ConstraintLayout>
