--- a/Drawit/app/src/main/res/layout-land/activity_main.xml
+++ b/Drawit/app/src/main/res/layout-land/activity_main.xml
@@ -48,14 +48,15 @@
         app:layout_constraintTop_toBottomOf="@id/welcomeMessage"
         app:layout_constraintLeft_toRightOf="@id/size" />
 
+
     <TextView
         android:id="@+id/nameText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Name: "
         android:labelFor="@id/nameEditText"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/optionsTab" />
+        app:layout_constraintLeft_toRightOf="@id/seekBar"
+        app:layout_constraintTop_toBottomOf="@id/welcomeMessage" />
 
     <EditText
         android:id="@+id/nameEditText"
@@ -82,5 +83,5 @@
         android:onClick="onFilesClick"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:contentDescription="@string/add" />
+        android:contentDescription="add" />
 </androidx.constraintlayout.widget.ConstraintLayout>
