--- a/Drawit/app/src/main/res/layout/activity_main.xml
+++ b/Drawit/app/src/main/res/layout/activity_main.xml
@@ -72,7 +72,7 @@
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/seekBar"/>
+        app:layout_constraintTop_toBottomOf="@id/nameEditText"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/addButton"
