--- a/TheBandDatabase/app/src/main/res/layout/fragment_list.xml
+++ b/TheBandDatabase/app/src/main/res/layout/fragment_list.xml
@@ -1,7 +1,6 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
+<?xml version="1.0" encoding="utf-8"?>
+<androidx.recyclerview.widget.RecyclerView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/band_recycler_view"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="30dp"
-    tools:context="com.zybooks.thebanddatabase.ListFragment" />
+    android:layout_height="match_parent" />
