--- a/Drawit/app/src/main/res/layout/activity_main.xml
+++ b/Drawit/app/src/main/res/layout/activity_main.xml
@@ -48,31 +48,14 @@
         app:layout_constraintTop_toBottomOf="@id/welcomeMessage"
         app:layout_constraintLeft_toRightOf="@id/size" />
 
-    <TextView
-        android:id="@+id/nameText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Name: "
-        android:labelFor="@id/nameEditText"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/optionsTab" />
-
-    <EditText
-        android:id="@+id/nameEditText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="text"
-        android:ems="5"
-        android:importantForAutofill="no"
-        app:layout_constraintLeft_toRightOf="@id/nameText"
-        app:layout_constraintBaseline_toBaselineOf="@id/nameText"/>
 
     <edu.wallawalla.cs.sukaki.drawit.Drawit
         android:id="@+id/canvas"
-        android:layout_height="wrap_content"
         android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="84dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/nameEditText"/>
+        app:layout_constraintTop_toBottomOf="@id/seekBar" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/addButton"
