--- a/Drawit3/app/src/main/res/layout-land/activity_draw.xml
+++ b/Drawit3/app/src/main/res/layout-land/activity_draw.xml
@@ -8,19 +8,16 @@
 
     <edu.wallawalla.cs.sukaki.Drawit3.Drawit
         android:id="@+id/canvas"
-        android:layout_width="wrap_content"
-        android:layout_height="530dp"
+        android:layout_width="600dp"
+        android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <FrameLayout
         android:id="@+id/fragment_container"
-        android:layout_width="match_parent"
-        android:layout_height="64dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/canvas" />
+        android:layout_width="128dp"
+        android:layout_height="match_parent"
+        app:layout_constraintStart_toEndOf="@+id/canvas"
+        tools:layout_editor_absoluteY="-60dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
